{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 354,
  "lineage": "73e7fcf2-2025-1331-f7f1-2251ebd31cb8",
  "resources": [
    {
      "mode": "data",
      "type": "aws_alb",
      "name": "ecs_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:245866473499:loadbalancer/app/uat-cheetah-newDB-ALB/64e725eea6bdb9f1",
            "arn_suffix": "app/uat-cheetah-newDB-ALB/64e725eea6bdb9f1",
            "dns_name": "uat-cheetah-newDB-ALB-625809960.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:245866473499:loadbalancer/app/uat-cheetah-newDB-ALB/64e725eea6bdb9f1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "uat-cheetah-newDB-ALB",
            "security_groups": [
              "sg-079906caaa15338df"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04d7edbe05ede0084"
              },
              {
                "subnet_id": "subnet-0b81dc3014157c933"
              }
            ],
            "subnets": [
              "subnet-04d7edbe05ede0084",
              "subnet-0b81dc3014157c933"
            ],
            "vpc_id": "vpc-09925fa4820857707",
            "zone_id": "Z1GM3OXH4ZPM65"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ecs_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:245866473499:subnet/subnet-04d7edbe05ede0084",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "available_ip_address_count": 233,
            "cidr_block": "10.0.0.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:SELECTED",
                "values": [
                  "EKS_2a"
                ]
              }
            ],
            "id": "subnet-04d7edbe05ede0084",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "245866473499",
            "state": "available",
            "tags": {
              "Name": "async-working-dev/Public",
              "SELECTED": "EKS_2a"
            },
            "vpc_id": "vpc-09925fa4820857707"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ecs_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:245866473499:subnet/subnet-0b81dc3014157c933",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "available_ip_address_count": 237,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "tag:SELECTED",
                "values": [
                  "EKS_2b"
                ]
              }
            ],
            "id": "subnet-0b81dc3014157c933",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "245866473499",
            "state": "available",
            "tags": {
              "Name": "async-working-dev/Public",
              "SELECTED": "EKS_2b"
            },
            "vpc_id": "vpc-09925fa4820857707"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:245866473499:vpc/vpc-09925fa4820857707",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07dfc38c901b2e544",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-04717b5b0b95bcaff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "ecs"
                ]
              }
            ],
            "id": "vpc-09925fa4820857707",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-076e6539a18289252",
            "owner_id": "245866473499",
            "state": "available",
            "tags": {
              "Name": "ecs"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "ecs-tf-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:245866473499:loadbalancer/app/ecs-tf-alb/2f64284d93eeb4cf",
            "arn_suffix": "app/ecs-tf-alb/2f64284d93eeb4cf",
            "dns_name": "ecs-tf-alb-1284100905.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:245866473499:loadbalancer/app/ecs-tf-alb/2f64284d93eeb4cf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-tf-alb",
            "security_groups": [
              "sg-0f38353dc1d64f7e9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04d7edbe05ede0084"
              },
              {
                "subnet_id": "subnet-0b81dc3014157c933"
              }
            ],
            "subnets": [
              "subnet-04d7edbe05ede0084",
              "subnet-0b81dc3014157c933"
            ],
            "tags": {
              "CREATE": "JOHNWU",
              "ENV": "UAT",
              "NAME": "AW_CHEETAH",
              "TOOL": "TERRAFORM"
            },
            "tags_all": {
              "CREATE": "JOHNWU",
              "ENV": "UAT",
              "NAME": "AW_CHEETAH",
              "TOOL": "TERRAFORM"
            },
            "vpc_id": "vpc-09925fa4820857707",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "data.aws_subnet_ids.ecs_subnets",
            "data.aws_vpc.main",
            "aws_security_group.alb_ecs_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "ecs_listener_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:245866473499:listener/app/ecs-tf-alb/2f64284d93eeb4cf/9a1d65c9a14f6778",
            "certificate_arn": "arn:aws:acm:ap-southeast-2:245866473499:certificate/62f83636-3222-48f7-9c3d-d0780181b79e",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:245866473499:targetgroup/cheetah-svc-tf/57363a2b2755547e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:245866473499:listener/app/ecs-tf-alb/2f64284d93eeb4cf/9a1d65c9a14f6778",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:245866473499:loadbalancer/app/ecs-tf-alb/2f64284d93eeb4cf",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-Ext-2018-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet_ids.ecs_subnets",
            "data.aws_vpc.main",
            "aws_acm_certificate.uat_domain_cert",
            "aws_alb.ecs-tf-alb",
            "aws_lb_target_group.ecs_svc_tf",
            "aws_security_group.alb_ecs_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_svc_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:245866473499:targetgroup/cheetah-svc-tf/57363a2b2755547e",
            "arn_suffix": "targetgroup/cheetah-svc-tf/57363a2b2755547e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v1/actuator/health",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:245866473499:targetgroup/cheetah-svc-tf/57363a2b2755547e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "cheetah-svc-tf",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "CREATE": "JOHNWU",
              "ENV": "UAT",
              "NAME": "AW_CHEETAH",
              "TOOL": "TERRAFORM"
            },
            "tags_all": {
              "CREATE": "JOHNWU",
              "ENV": "UAT",
              "NAME": "AW_CHEETAH",
              "TOOL": "TERRAFORM"
            },
            "target_type": "ip",
            "vpc_id": "vpc-09925fa4820857707"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_ecs_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:245866473499:security-group/sg-0f38353dc1d64f7e9",
            "description": "created by TF",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f38353dc1d64f7e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-ecs-tf",
            "name_prefix": "",
            "owner_id": "245866473499",
            "revoke_rules_on_delete": false,
            "tags": {
              "CREATE": "JOHNWU",
              "ENV": "UAT",
              "NAME": "AW_CHEETAH",
              "TOOL": "TERRAFORM"
            },
            "tags_all": {
              "CREATE": "JOHNWU",
              "ENV": "UAT",
              "NAME": "AW_CHEETAH",
              "TOOL": "TERRAFORM"
            },
            "timeouts": null,
            "vpc_id": "vpc-09925fa4820857707"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cheetah_sg_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:245866473499:security-group/sg-0d3e69bd9e7581195",
            "description": "created by TF",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3e69bd9e7581195",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "uat-cheetah-sg-tf",
            "name_prefix": "",
            "owner_id": "245866473499",
            "revoke_rules_on_delete": false,
            "tags": {
              "CREATE": "JOHNWU",
              "ENV": "UAT",
              "NAME": "AW_CHEETAH",
              "TOOL": "TERRAFORM"
            },
            "tags_all": {
              "CREATE": "JOHNWU",
              "ENV": "UAT",
              "NAME": "AW_CHEETAH",
              "TOOL": "TERRAFORM"
            },
            "timeouts": null,
            "vpc_id": "vpc-09925fa4820857707"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}